Resolved merge conflict

--- a/public/project/2018-06-06-escuela-verano/index.html
+++ b/public/project/2018-06-06-escuela-verano/index.html
@@ -57,6 +57,8 @@ Espacual tiene un acuerdo con los organizadores del Seminario Avanzado de Invest
   
   <link rel="stylesheet" href="/styles.css">
   
+  <link rel="stylesheet" href="/css/blue.css">
+  
 
   
 
