--- a/public/sobrenosotros/equipo2017-22/index.html
+++ b/public/sobrenosotros/equipo2017-22/index.html
@@ -59,6 +59,8 @@ Secretaria Carmen de la Cuesta Benjumea Universitat d&rsquo;Alacant">
   
   <link rel="stylesheet" href="/styles.css">
   
+  <link rel="stylesheet" href="/css/blue.css">
+  
 
   
 
