--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,8 @@
   
   <link rel="stylesheet" href="/styles.css">
   
+  <link rel="stylesheet" href="/css/blue.css">
+  
 
   
 
@@ -292,8 +294,10 @@
 
 <section id="hero" class="hero-overlay" style="
 
-background-color: #7f8cb4;
 
+background-image:
+
+url('/img/headers/logo.png');
 
 ;">
 
