--- a/public/project/2018-02-01-iberacual/index.html
+++ b/public/project/2018-02-01-iberacual/index.html
@@ -56,6 +56,8 @@ Se han realizado dos conferencias. La primera en 2008 en la Universitat Autònom
   
   <link rel="stylesheet" href="/styles.css">
   
+  <link rel="stylesheet" href="/css/blue.css">
+  
 
   
 
