--- a/public/teaching/2018-02-01-saic/index.html
+++ b/public/teaching/2018-02-01-saic/index.html
@@ -56,6 +56,8 @@ El SAIC es un foro para compartir conocimientos sobre los métodos cualitativos,
   
   <link rel="stylesheet" href="/styles.css">
   
+  <link rel="stylesheet" href="/css/blue.css">
+  
 
   
 
